--- a/stateful/es-master-stateful.yaml
+++ b/stateful/es-master-stateful.yaml
@@ -77,7 +77,7 @@ spec:
   - metadata:
       name: storage
     spec:
-      storageClassName: standard
+      storageClassName: local-volume
       accessModes: [ ReadWriteOnce ]
       resources:
         requests:
