--- a/stateful/es-data-stateful.yaml
+++ b/stateful/es-data-stateful.yaml
@@ -81,8 +81,8 @@ spec:
   - metadata:
       name: storage
     spec:
-      storageClassName: standard
+      storageClassName: local-volume
       accessModes: [ ReadWriteOnce ]
       resources:
         requests:
-          storage: 12Gi
+          storage: 10Gi
